--- a/packages/frontend/src/app/components/meal-calendar/meal-group/meal-group.component.html
+++ b/packages/frontend/src/app/components/meal-calendar/meal-group/meal-group.component.html
@@ -1,7 +1,5 @@
 <div class="group" *ngFor="let mealTime of getObjectKeys(mealItems.itemsByMeal)">
-  <span class="meal-title">{{
-    mealNameToI18n(mealTime)
-  }}</span>
+  <span class="meal-title" [innerHTML]="mealLabel(mealTime)"></span>
   <calendar-item
     *ngFor="let mealItem of mealItems.itemsByMeal[mealTime]"
     [mealItem]="mealItem"
@@ -9,13 +7,9 @@
     draggable="{{ enableEditing }}"
     (dragstart)="dragStart($event, mealItem)"
     (dragend)="dragEnd($event, mealItem)"
+    [style.border-left-color]="getMealColor(mealItem.meal)"
     [ngClass]="{
-      dragging: mealItemsDragging[mealItem.id],
-      breakfast: mealItem.meal === 'breakfast',
-      lunch: mealItem.meal === 'lunch',
-      dinner: mealItem.meal === 'dinner',
-      snacks: mealItem.meal === 'snacks',
-      other: mealItem.meal === 'other',
+      dragging: mealItemsDragging[mealItem.id]
     }"
   ></calendar-item>
 </div>
