--- a/packages/frontend/src/app/components/select-meal/select-meal.component.html
+++ b/packages/frontend/src/app/components/select-meal/select-meal.component.html
@@ -1,17 +1,14 @@
 <div>
   <ion-item>
-    <ion-select
-      label="{{ 'components.selectMeal.title' | translate }}"
-      [(ngModel)]="meal"
-      (ngModelChange)="mealChanged()"
-      okText="{{ 'generic.ok' | translate }}"
-      cancelText="{{ 'generic.cancel' | translate }}"
-    >
-      <ion-select-option
-        *ngFor="let mealOption of mealOptions"
-        [value]="mealOption.mealTime"
-        >{{ mealOption.title + " " + mealOption.mealTime }}</ion-select-option
-      >
+    <ion-select label="{{ 'components.selectMeal.title' | translate }}" [(ngModel)]="meal"
+      (ngModelChange)="mealChanged()" okText="{{ 'generic.ok' | translate }}"
+      cancelText="{{ 'generic.cancel' | translate }}">
+      <ion-select-option *ngFor="let mealOption of mealOptions" [value]="mealOption.mealTime">
+        <span [innerHTML]="getLabel(mealOption)"></span>
+      </ion-select-option>
     </ion-select>
+    <ion-button slot="end" (click)="onClickSettings()">
+      <ion-icon name="settings" slot="icon-only"></ion-icon>
+    </ion-button>
   </ion-item>
 </div>
