--- a/packages/frontend/src/app/pages/settings-components/meal-options/new-meal-option-modal/new-meal-option-modal.page.html
+++ b/packages/frontend/src/app/pages/settings-components/meal-options/new-meal-option-modal/new-meal-option-modal.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="nav">
 
-    {{ 'pages.settings.mealOptions.new' | translate }}
+    <ion-title>{{ 'pages.settings.mealOptions.new' | translate }}</ion-title>
 
     <ion-buttons slot="end">
       <ion-button (click)="cancel()">
