label-and-order-meals: code review.

--- a/packages/frontend/src/app/pages/settings-components/meal-options/manage-meal-option-modal/manage-meal-option-modal.page.html
+++ b/packages/frontend/src/app/pages/settings-components/meal-options/manage-meal-option-modal/manage-meal-option-modal.page.html
@@ -19,7 +19,7 @@
       <p>
         <br />
         <span>
-          {{mealOption.title}} at {{mealOption.mealTime}}
+          {{mealOption.title}} - {{mealOption.mealTime}}
         </span>
         <br />
       </p>
