--- a/packages/frontend/src/app/pages/settings-components/meal-options/meal-options.page.html
+++ b/packages/frontend/src/app/pages/settings-components/meal-options/meal-options.page.html
@@ -20,16 +20,23 @@
 
   <ion-item lines="inset">
     <ion-icon name="nutrition-outline" slot="start"></ion-icon>
-    <ion-toggle [(ngModel)]="preferences[preferenceKeys.ShowDefaults]" (ngModelChange)="savePreferences()">
+    <ion-toggle
+      [(ngModel)]="preferences[preferenceKeys.ShowDefaults]"
+      (ngModelChange)="savePreferences()"
+    >
       <div class="ion-text-wrap">
-        {{ 'pages.settings.mealOptions.configuration.showDefaults' | translate }}
+        {{ 'pages.settings.mealOptions.configuration.showDefaults' | translate
+        }}
       </div>
     </ion-toggle>
   </ion-item>
 
   <ion-item lines="inset">
     <ion-icon name="time-outline" slot="start"></ion-icon>
-    <ion-toggle [(ngModel)]="preferences[preferenceKeys.ShowTime]" (ngModelChange)="savePreferences()">
+    <ion-toggle
+      [(ngModel)]="preferences[preferenceKeys.ShowTime]"
+      (ngModelChange)="savePreferences()"
+    >
       <div class="ion-text-wrap">
         {{ 'pages.settings.mealOptions.configuration.showTime' | translate }}
       </div>
@@ -37,14 +44,23 @@
   </ion-item>
 
   <ion-list>
-    <ion-item *ngFor="let mealOption of mealOptions" [disabled]="mealOption.userId === '0'" [hidden]="!isMealOptionVisible(mealOption)"
-      (click)="manageMealOption(mealOption)" button class="ion-margin-start meal-options-settings">
+    <ion-item
+      *ngFor="let mealOption of mealOptions"
+      [disabled]="mealOption.userId === '0'"
+      [hidden]="!isMealOptionVisible(mealOption)"
+      (click)="manageMealOption(mealOption)"
+      button
+      class="ion-margin-start meal-options-settings"
+    >
       <ion-label>
         <h2 class="ion-text-capitalize">
-          {{ mealOption.title }}<ng-container *ngIf="preferences[preferenceKeys.ShowTime]"> - {{ mealOption.mealTime }}</ng-container>
+          {{ mealOption.title }}<ng-container
+            *ngIf="preferences[preferenceKeys.ShowTime]"
+          >
+            - {{ mealOption.mealTime }}</ng-container
+          >
         </h2>
       </ion-label>
-
     </ion-item>
   </ion-list>
 
@@ -53,5 +69,4 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-
 </ion-content>
