feat: set page titles for every route

--- a/packages/frontend/src/app/pages/info-components/legal/legal.page.html
+++ b/packages/frontend/src/app/pages/info-components/legal/legal.page.html
@@ -4,7 +4,9 @@
       <ion-back-button [defaultHref]="defaultBackHref"></ion-back-button>
     </ion-buttons>
 
-    <ion-title>Legal, agreements and disclaimers</ion-title>
+    <ion-title>
+      {{ 'pages.legal.title' | translate }}
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
