--- a/packages/frontend/src/app/pages/info-components/legal/legal.page.html
+++ b/packages/frontend/src/app/pages/info-components/legal/legal.page.html
@@ -4,9 +4,7 @@
       <ion-back-button [defaultHref]="defaultBackHref"></ion-back-button>
     </ion-buttons>
 
-    <ion-title>
-      {{ 'pages.legal.title' | translate }}
-    </ion-title>
+    <ion-title> {{ 'pages.legal.title' | translate }} </ion-title>
   </ion-toolbar>
 </ion-header>
 
