fix: improve API I/O validation

--- a/packages/frontend/src/app/pages/recipe-components/edit-recipe/edit-recipe.page.html
+++ b/packages/frontend/src/app/pages/recipe-components/edit-recipe/edit-recipe.page.html
@@ -280,10 +280,20 @@
     </div>
 
     <div class="ion-padding">
-      <ion-button *ngIf="recipe.id" expand="block" (click)="save()">
+      <ion-button
+        *ngIf="recipe.id"
+        expand="block"
+        (click)="save()"
+        [disabled]="saving"
+      >
         {{ 'pages.editRecipe.save' | translate }}
       </ion-button>
-      <ion-button *ngIf="!recipe.id" expand="block" (click)="save()">
+      <ion-button
+        *ngIf="!recipe.id"
+        expand="block"
+        (click)="save()"
+        [disabled]="saving"
+      >
         {{ 'pages.editRecipe.create' | translate }}
       </ion-button>
     </div>
